--- a/public/complements/styles/secondary/form/start.css
+++ b/public/complements/styles/secondary/form/start.css
@@ -121,10 +121,12 @@
 }
 
 #particles-js {
-    position: fixed;
-    width   : 100%;
-    height  : 100%;
-    z-index : -1;
+
+    position     : relative;
+    width        : 80%;
+    height       : 80%;
+    border-radius: 10px;
+
 }
 
 /* Estilos generales */
@@ -258,7 +260,7 @@ body {
     font-family     : "neue";
     background-color: var(--color-black);
     border-radius   : 20px;
-    border          : 1px solid var(--color-light-grey);
+    border          : 1px solid var(--color-grey);
     display         : inline-block;
     padding         : 5px 10px;
 }
