--- a/public/complements/styles/main/home/start.css
+++ b/public/complements/styles/main/home/start.css
@@ -3,6 +3,8 @@
 :root {
   --color-main      : #d60b0b;
   --color-secondary : #bb0f0f;
+  --color-tertiary  : #0046FE;
+  --color-quaternary: #3b6ff2;
   --color-black     : #151414;
   --color-semiblack : #202020;
   --color-dark      : #0c0b0b;
