--- a/public/complements/styles/main/home/software.css
+++ b/public/complements/styles/main/home/software.css
@@ -11,6 +11,10 @@
     font-weight: lighter;
 }
 
+.light-mode .section-header h2 i {
+    color: var(--color-tertiary);
+}
+
 .section-content {
     display       : flex;
     flex-direction: column;
@@ -59,6 +63,10 @@
 
 .text h3:hover {
     color: red !important;
+}
+
+.light-mode .text h3:hover {
+    color: var(--color-tertiary) !important;
 }
 
 .text h4 {
@@ -110,12 +118,16 @@
 }
 
 .light-mode .text p span {
-    color           : var(--color-secondary);
+    color           : var(--color-quaternary);
     background-color: var(--color-light-grey);
 }
 
 .text p span:hover {
     color: red !important;
+}
+
+.light-mode .text p span:hover {
+    color: var(--color-tertiary) !important;
 }
 
 .text ul {
@@ -146,12 +158,16 @@
 }
 
 .light-mode .text ul li span {
-    color           : var(--color-secondary);
+    color           : var(--color-quaternary);
     background-color: var(--color-light-grey);
 }
 
 .text ul li span:hover {
     color: red !important;
+}
+
+.light-mode .text ul li span:hover {
+    color: var(--color-tertiary) !important;
 }
 
 /* software section ends here */
