--- a/public/complements/styles/main/home/start.css
+++ b/public/complements/styles/main/home/start.css
@@ -1,5 +1,3 @@
-/* color palette */
-
 :root {
   --color-main      : #d60b0b;
   --color-secondary : #bb0f0f;
@@ -14,8 +12,6 @@
   --color-semigrey  : #565555;
   --color-grey      : #535151;
 }
-
-/* Fonts */
 
 @font-face {
   font-family: "aero";
@@ -42,9 +38,6 @@
   src        : url("../../fonts/Ahsing/Ahsing-Regular.otf") format("truetype");
 }
 
-
-/* general styles */
-
 * {
   margin            : 0;
   padding           : 0;
@@ -58,25 +51,19 @@
   user-select       : none;
 }
 
-
-/* cursor styles */
-
 .cursor {
-  pointer-events: none;
-  position      : absolute;
-  padding       : 0.3vw;
-  border-radius : 50%;
-  z-index       : 9000;
-  transition    : transform 0.1s ease, width 0.3s ease, height 0.3s ease,
-    background-color 0.5s ease;
+  pointer-events  : none;
+  position        : absolute;
+  padding         : 0.3vw;
+  border-radius   : 50%;
+  z-index         : 9000;
+  transition      : transform 0.1s ease, width 0.3s ease, height 0.3s ease, background-color 0.5s ease;
   background-color: var(--color-semigrey);
 }
 
 .light-mode .cursor {
   background-color: var(--color-black);
 }
-
-/* line styles */
 
 hr {
   width : 80%;
@@ -88,24 +75,16 @@ hr {
   border-color: var(--color-semigrey);
 }
 
-/* Class to hide elements by default */
-
 .hidden {
   opacity   : 0;
   transform : translateY(70px);
   transition: opacity 0.9s ease-out, transform 0.9s ease-out;
 }
 
-/* Class for displaying elements with animation */
-
 .visible {
   opacity  : 1;
   transform: translateY(0);
 }
-
-
-
-/* scroll icon styles */
 
 .scroll-to-top {
   position        : fixed;
@@ -128,7 +107,6 @@ hr {
   z-index         : 1000;
 }
 
-/* Tamaño reducido cuando se scrollea */
 .scroll-to-top.scrolled {
   width         : 50px;
   height        : 50px;
@@ -143,10 +121,6 @@ hr {
   color           : var(--color-black);
   border          : 2px solid var(--color-black);
 }
-
-
-
-/* banner cookie styles */
 
 .cookie-banner {
   position        : fixed;
@@ -183,8 +157,6 @@ hr {
 .cookie-banner a:hover {
   text-decoration: underline;
 }
-
-/* body styles */
 
 body {
   margin          : 0;
