--- a/public/complements/styles/secondary/form/start.css
+++ b/public/complements/styles/secondary/form/start.css
@@ -564,3 +564,36 @@ input[type="submit"]:hover {
     text-decoration: underline;
     color          : var(--color-main);
 }
+
+#toggle-dark-mode {
+    position       : fixed;
+    bottom         : 60px;
+    left           : 35px;
+    background     : var(--color-black);
+    border         : 1px solid var(--color-grey);
+    color          : var(--color-light-grey);
+    border-radius  : 15px;
+    padding        : 10px 11px;
+    font-size      : 20px;
+    z-index        : 1000;
+    text-decoration: none;
+    display        : flex;
+    align-items    : center;
+    justify-content: center;
+    transition     : background-color 0.3s, border 0.3s ease, color 0.3s ease;
+}
+
+.light-mode #toggle-dark-mode {
+    background: var(--color-white);
+    color     : var(--color-grey);
+}
+
+#toggle-dark-mode:hover {
+    background-color: var(--color-semigrey);
+    border          : 1px solid var(--color-light-grey);
+}
+
+.light-mode #toggle-dark-mode:hover {
+    background-color: var(--color-light-grey);
+    border          : 1px solid var(--color-dark);
+}
