--- a/public/complements/styles/secondary/profile/dashboard.css
+++ b/public/complements/styles/secondary/profile/dashboard.css
@@ -1,3 +1,43 @@
+:root {
+  --color-main      : #d60b0b;
+  --color-secondary : #bb0f0f;
+  --color-tertiary  : #0046FE;
+  --color-quaternary: #3b6ff2;
+  --color-black     : #151414;
+  --color-semiblack : #202020;
+  --color-dark      : #0c0b0b;
+  --color-light     : #fcfcfc;
+  --color-white     : #f3f2f2;
+  --color-light-grey: #cfcfcf;
+  --color-semigrey  : #565555;
+  --color-grey      : #535151;
+}
+
+@font-face {
+  font-family: "aero";
+  src        : url("../../fonts/aeroxys/Aeroxys.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "schabo";
+  src        : url("../../fonts/schabo/SCHABO-Condensed.otf") format("truetype");
+}
+
+@font-face {
+  font-family: "neue";
+  src        : url("../../fonts/neue/NeueMontreal-Regular.otf") format("truetype");
+}
+
+@font-face {
+  font-family: "neue-medium";
+  src        : url("../../fonts/neue/NeueMontreal-Medium.otf") format("truetype");
+}
+
+@font-face {
+  font-family: "ahsing";
+  src        : url("../../fonts/Ahsing/Ahsing-Regular.otf") format("truetype");
+}
+
 /* General */
 * {
   box-sizing : border-box;
@@ -10,15 +50,15 @@ body {
   display         : flex;
   height          : 100vh;
   overflow        : hidden;
-  background-color: #f4f4f9;
-  color           : #333;
+  background-color: var(--color-dark);
+  color           : var(--color-white);
 }
 
 /* Sidebar */
 .sidebar {
   width           : 250px;
-  background-color: #1e293b;
-  color           : #fff;
+  background-color: var(--color-black);
+  color           : var(--color-white);
   padding         : 20px;
   display         : flex;
   flex-direction  : column;
@@ -35,19 +75,12 @@ body {
   text-align   : center;
 }
 
-.sidebar-select {
-  margin-bottom: 20px;
-  padding      : 8px;
-  font-size    : 16px;
-  color        : #333;
-  border-radius: 4px;
-}
 
 .sidebar nav a {
   display        : flex;
   align-items    : center;
   padding        : 10px;
-  color          : #fff;
+  color          : var(--color-white);
   text-decoration: none;
   font-size      : 16px;
   margin-bottom  : 5px;
@@ -55,33 +88,18 @@ body {
   transition     : background-color 0.2s;
 }
 
-.sidebar nav a.active,
+.sidebar nav a.active {
+  background-color: var(--color-secondary);
+}
+
 .sidebar nav a:hover {
-  background-color: #3b82f6;
+  background-color: var(--color-semigrey);
 }
 
 .sidebar nav a .icon {
   margin-right: 10px;
 }
 
-.sidebar .notification {
-  background-color: #ef4444;
-  color           : #fff;
-  font-size       : 12px;
-  padding         : 2px 6px;
-  border-radius   : 50%;
-  margin-left     : auto;
-}
-
-#toggleSidebar {
-  align-self: center;
-  background: none;
-  border    : none;
-  color     : #fff;
-  font-size : 18px;
-  cursor    : pointer;
-  margin-top: auto;
-}
 
 /* Main Content */
 .main-content {
@@ -119,12 +137,12 @@ h2 {
 }
 
 .list-group-item {
-  border          : 1px solid #ddd;
+  border          : 1px solid var(--color-grey);
   border-radius   : 8px;
   padding         : 10px;
   margin-bottom   : 10px;
   cursor          : pointer;
-  background-color: #f9f9f9;
+  background-color: var(--color-black);
   transition      : background-color 0.3s ease;
 }
 
@@ -161,16 +179,20 @@ h2 {
 
 .wifi-section {
   width           : 50%;
-  background-color: #f9f9f9;
+  background-color: var(--color-semiblack);
+  border          : 1px solid var(--color-grey);
   padding         : 20px;
-  border-radius   : 8px;
-  box-shadow      : 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius   : 10px;
 }
 
 .details-section {
   width           : 50%;
-  background-color: #e6e6e6;
+  background-color: var(--color-semiblack);
+  border          : 1px solid var(--color-grey);
   padding         : 20px;
-  border-radius   : 8px;
-  box-shadow      : 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius   : 10px;
+}
+
+.details-section p {
+  margin-bottom: 10px;
 }
