--- a/public/complements/styles/secondary/profile/dashboard.css
+++ b/public/complements/styles/secondary/profile/dashboard.css
@@ -137,17 +137,18 @@ h2 {
 }
 
 .list-group-item {
+  list-style: none;
   border          : 1px solid var(--color-grey);
   border-radius   : 8px;
   padding         : 10px;
   margin-bottom   : 10px;
   cursor          : pointer;
   background-color: var(--color-black);
-  transition      : background-color 0.3s ease;
+  transition      : background-color 0.5s ease;
 }
 
 .list-group-item:hover {
-  background-color: #e6e6e6;
+  background-color: var(--color-semigrey);
 }
 
 .network-details {
@@ -155,7 +156,8 @@ h2 {
   /* Inicialmente oculto */
   margin-top      : 10px;
   padding         : 10px;
-  background-color: #f1f1f1;
+  background-color: var(--color-black);
+  border: 1px solid var(--color-light-grey);
   border-radius   : 5px;
 }
 
@@ -167,7 +169,7 @@ h2 {
 #loading-spinner p {
   margin-top: 10px;
   font-size : 1.1rem;
-  color     : #007bff;
+  color     : var(--color-white);
   /* Color azul primario de Bootstrap */
 }
 
