--- a/public/complements/styles/secondary/profile/dashboard.css
+++ b/public/complements/styles/secondary/profile/dashboard.css
@@ -108,18 +108,80 @@ body {
   overflow-y: auto;
 }
 
-.user-profile {
-  display      : flex;
-  align-items  : center;
-  margin-bottom: 20px;
+/* Alinear el header a la derecha */
+.main-content header {
+  display        : flex;
+  justify-content: flex-end;
+
 }
 
-.user-profile img {
-  width        : 40px;
-  height       : 40px;
-  border-radius: 50%;
-  margin-right : 10px;
+.user-profile {
+  display       : flex;
+  align-items   : center;
+  margin-bottom : 20px;
+  padding-bottom: 10px;
+  margin-left   : auto;
+  /* Mueve el perfil al lado derecho */
 }
+
+.user-profile .user {
+  font-size       : 1.5em;
+  background-color: var(--color-semiblack);
+  padding         : 8px;
+  border          : 1px solid var(--color-light-grey);
+  border-radius   : 50%;
+  margin-right    : 10px;
+}
+
+/* Alinear el icono de configuración con margen */
+.user-profile .settings {
+  margin-left    : 10px;
+  font-size      : 1.5em;
+  text-decoration: none;
+  color          : var(--color-white);
+}
+
+/* Modal */
+.modal {
+  display         : none;
+  /* Oculto por defecto */
+  position        : fixed;
+  z-index         : 1;
+  left            : 0;
+  top             : 0;
+  width           : 100%;
+  height          : 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* Contenido del Modal */
+.modal-content {
+  background-color: #333;
+  color           : #fff;
+  margin          : 15% auto;
+  padding         : 20px;
+  border-radius   : 8px;
+  width           : 80%;
+  max-width       : 400px;
+  text-align      : center;
+}
+
+.close {
+  color      : #aaa;
+  float      : right;
+  font-size  : 28px;
+  font-weight: bold;
+  cursor     : pointer;
+}
+
+.close:hover,
+.close:focus {
+  color          : #fff;
+  text-decoration: none;
+  cursor         : pointer;
+}
+
+
 
 .container {
   max-width: 600px;
@@ -131,13 +193,19 @@ h2 {
   margin-bottom: 20px;
 }
 
+.section-header h2 {
+  font-size  : 4.2em;
+  color      : var(--color-secondary);
+  font-weight: lighter;
+}
+
 #fetch-networks {
   display: block;
   margin : auto;
 }
 
 .list-group-item {
-  list-style: none;
+  list-style      : none;
   border          : 1px solid var(--color-grey);
   border-radius   : 8px;
   padding         : 10px;
@@ -157,7 +225,7 @@ h2 {
   margin-top      : 10px;
   padding         : 10px;
   background-color: var(--color-black);
-  border: 1px solid var(--color-light-grey);
+  border          : 1px solid var(--color-light-grey);
   border-radius   : 5px;
 }
 
@@ -179,22 +247,87 @@ h2 {
   gap    : 20px;
 }
 
+.relative-container {
+  position: relative;
+  width   : 100%;
+}
+
 .wifi-section {
-  width           : 50%;
-  background-color: var(--color-semiblack);
+  width           : 100%;
+  height          : 100%;
+  background-color: var(--color-black);
   border          : 1px solid var(--color-grey);
   padding         : 20px;
-  border-radius   : 10px;
+  border-radius   : 5px;
+  overflow-y      : auto;
+  transition      : border 0.5s ease;
+  /* Habilita el scroll vertical si el contenido sobrepasa la altura */
 }
 
-.details-section {
-  width           : 50%;
+.wifi-section:hover {
+  border: 1px solid var(--color-light-grey);
+}
+
+.wifi-section h2 {
+  text-align : center;
+  font-family: "neue-medium";
+  font-size  : 1.8em;
+  font-weight: lighter;
+}
+
+.wifi-section i {
+  font-size : 2em;
+  text-align: center;
+}
+
+.accordion-section {
+  width         : 50em;
+  display       : flex;
+  flex-direction: column;
+  gap           : 10px;
+}
+
+.accordion-item {
+  border       : 1px solid var(--color-grey);
+  padding      : 10px;
+  border-radius: 8px;
+  transition   : background-color 0.5s ease, border 0.5s ease;
+}
+
+.accordion-item:hover {
   background-color: var(--color-semiblack);
-  border          : 1px solid var(--color-grey);
-  padding         : 20px;
-  border-radius   : 10px;
+  border          : 1px solid var(--color-light-grey);
 }
 
-.details-section p {
-  margin-bottom: 10px;
+.accordion-title {
+  font-size      : 18px;
+  color          : var(--color-secondary);
+  cursor         : pointer;
+  display        : flex;
+  align-items    : center;
+  justify-content: center;
+  margin         : auto;
+}
+
+.accordion-content {
+  margin-top      : 10px;
+  display         : none;
+  padding         : 10px;
+  background-color: #444;
+  color           : #fff;
+  border-top      : 1px solid #555;
+  max-height      : 150px;
+  /* Altura máxima del acordeón desplegado */
+  overflow-y      : auto;
+  /* Agrega una barra de desplazamiento si el contenido es demasiado largo */
+}
+
+
+.accordion-content p {
+  margin: 5px 0;
+}
+
+.icon {
+  margin-right: 10px;
+  color       : var(--color-white);
 }
